@@ -103,3 +103,4 @@ tty
 typetrait
 user
 x2a
+semaphore
