@@ -26,8 +26,8 @@
     // icmake/library and should not be altered.
 
 #define PTHREAD     "sharedmutex sharedblock sharedmemory sharedsegment " \
-                    "process processdata"
-    // Classes requiring -lpthread
+                    "process processdata semaphore"
+    // Classes requiring -pthread during compilation
 
 #define LDFLAGS    "-lpthread"
     // Specify linker options that should be used when creating the shared
