@@ -1,0 +1,74 @@
+includefile(include/header)
+
+COMMENT(manpage, section, releasedate, archive, short name)
+manpage(FBB::Semaphore)(3bobcat)(_CurYrs_)(libbobcat-dev__CurVers_-x.tar.gz)
+                    (Dijkstra's Semaphore)
+
+manpagename(FBB::Semaphore)
+                (Implements the Semaphore type designed by Dijkstra)
+
+manpagesynopsis()
+    bf(#include <bobcat/semaphore>)nl()
+
+    Linking option: tt(-lpthread -lbobcat) 
+
+manpagedescription()
+
+According to tt(http://en.wikipedia.org/wiki/Semaphore_(programming)) a
+semaphore is a variable or abstract data type that is used for controlling
+access, by multiple processes, to a common resource in a parallel programming
+or a multi user environment.
+
+A useful way to think of a semaphore is as a record of how many units of a
+particular resource are available, coupled with operations to safely (i.e.,
+without race conditions) adjust that record as units are required or become
+free, and, if necessary, wait until a unit of the resource becomes
+available. 
+
+Semaphores are a useful tool in the prevention of race conditions.  Semaphores
+allowing an arbitrary resource count are called counting semaphores, while
+semaphores which are restricted to the values 0 and 1 (or locked/unlocked,
+unavailable/available) are called binary semaphores. Both types are supported
+by Bobcat's implementation.
+
+includefile(include/namespace)
+
+manpagesection(INHERITS FROM)
+    -
+
+manpagesection(CONSTRUCTORS)
+    itemization(
+    itb(Semaphore(size_t nAvailable))
+        The constructor defines the semaphore's initial state. With a counting
+semaphore tt(nAvailable) defines, e.g., the number of available locations in a
+storage area. Locking/unlocking with facilities to notify another waiting
+thread is implemented via binary semaphores, which are initialized to 1 or 0.
+    )
+    Copy and move constructors are not available.
+
+
+manpagesection(MEMBER FUNCTIONS)
+     All members of bf(std::ostringstream) and bf(  std::exception) are
+available, as bf(FBB::Semaphore) inherits from these classes.
+    itemization(
+    itb()
+    )
+
+manpagesection(MANIPULATORS)
+    itemization(
+    itb(FBB::) 
+    )
+
+manpagesection(EXAMPLE)
+    To do
+
+manpagefiles()
+    em(bobcat/semaphore) - defines the class interface
+
+manpageseealso()
+    bf(bobcat)(7)
+
+manpagebugs()
+    None Reported.
+
+includefile(include/trailer)
