@@ -1,0 +1,5 @@
+#include "semaphore.ih"
+
+Semaphore::
+{
+}
