@@ -1,0 +1,6 @@
+#include "semaphore.ih"
+
+Semaphore::Semaphore(size_t nAvailable)
+:
+    d_nAvailable(nAvailable)
+{}
