@@ -1,0 +1,6 @@
+#include "semaphore.ih"
+
+inline void Semaphore::set(size_t available)
+{
+    d_nAvailable = available;
+}
