@@ -1,0 +1,4 @@
+inline size_t  Semaphore::size() const
+{
+    return d_nAvailable;
+}
