@@ -1,3 +1,9 @@
+bobcat (3.24.00)
+
+  * Added new class Semaphore
+
+
+
 bobcat (3.23.01)
 
   * Using (s)random instead of (s)rand in Randbuffer
